--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,15 @@
       </p>
     </div>
 
+    <div class="container-fluid box">
+      <form>
+        <div class='form-group'>
+          <input type='text' class='form-control' placeholder='Type Your First Name Here' name='name' value='' />
+          <button type='submit' class='btn btn-success'>Click!</button>
+        </div>
+      </form>
+    </div>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
