added body-parser and results page. It works

--- a/views/results.html
+++ b/views/results.html
@@ -17,13 +17,8 @@
       </p>
     </div>
 
-    <div class="container-fluid box">
-      <form action='/' method='POST'>
-        <div class='form-group'>
-          <input type='text' class='form-control' placeholder='Type Your First Name Here' name='name' value='' />
-          <button type='submit' class='btn btn-success'>Click!</button>
-        </div>
-      </form>
+    <div class="container-fluid results">
+      <h1>Your name is: {{ name }}</h1>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
