added results.css and improved html layout for results.html

--- a/views/results.html
+++ b/views/results.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tell Me Your Name</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel='stylesheet' href='/style.css' />
+    <link rel='stylesheet' href='/results.css' />
   </head>
   <body>
 
-    <div class='container-fluid welcome'>
-      <h1>Laura Veee Made This</h1>
-      <p>
-        Bow down to her awesome, mad talents!
-      </p>
+    <div class='container-fluid results'>
+      <h1>{{ name }}</h1>
     </div>
 
-    <div class="container-fluid results">
-      <h1>Your name is: {{ name }}</h1>
+    <div class='container-fluid art'>
+
+    </div>
+
+    <div class="container-fluid author">
+      <h4>made by <a href='https://cyclokitty.github.io/'>Laura Veee</a> 2017</h4>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
