added a unicorn image and animated it

--- a/views/results.html
+++ b/views/results.html
@@ -9,13 +9,18 @@
     <link rel='stylesheet' href='/results.css' />
   </head>
   <body>
-
+    
     <div class='container-fluid results'>
-      <h1>{{ name }}</h1>
+      <div class="unicorn">
+        <img src="/unicorn.png" alt="unicorn">
+      </div>
+      <div class="ani-name">
+        <h1>{{ name }}</h1>
+      </div>
     </div>
 
     <div class='container-fluid art'>
-
+      <!-- this will contain two images -->
     </div>
 
     <div class="container-fluid author">
