--- a/public/results.css
+++ b/public/results.css
@@ -13,9 +13,36 @@ html, body {
   height: 60%;
 }
 
-.results h1{
+@keyframes unicorn {
+  from {top: 0; left: 0;}
+  to {top: 0; left: 100%;}
+}
+
+.unicorn img {
+  position: relative;
+  animation-name: unicorn;
+  animation-timing-function: linear;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes ani-name {
+  0% {color: red;}
+  16% {color: orange;}
+  32% {color: yellow;}
+  48% {color: green;}
+  64% {color: blue;}
+  80% {color: indigo;}
+  100% {color: violet;}
+}
+
+.ani-name h1{
   font-size: 5em;
   text-align: center;
+  color: red;
+  animation-name: ani-name;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
 }
 
 .art {
@@ -40,4 +67,5 @@ html, body {
 
 .author a:hover {
   color: #f5f5dc;
+  text-shadow: 1px 1px #FF0080;
 }
