--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');
 
 body {
-  background-color: #191970;
-  color: 	#f5f5dc;
+  background-color: white;
+  color: 	#333;
   font-family: 'Luckiest Guy', cursive;
 }
 
@@ -11,6 +11,10 @@ body {
   margin: 0 auto;
   text-align: center;
   padding: 20px;
+}
+
+button {
+  margin: 10px;
 }
 
 .box {
