added flower imgs

--- a/public/results.css
+++ b/public/results.css
@@ -48,13 +48,13 @@ html, body {
 .art {
   height: 33%;
   width: 100%;
-  background-color: #018E0E;
+  background-color: #33a43e;
 }
 
 .author {
   height: 7%;
   width: 100%;
-  background-color: #018E0E;
+  background-color: #33a43e;
   color: #f5f5dc;
   text-align: center;
 }
