--- a/views/results.html
+++ b/views/results.html
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href='/results.css' />
   </head>
   <body>
-    
+
     <div class='container-fluid results'>
       <div class="unicorn">
         <img src="/unicorn.png" alt="unicorn">
@@ -20,11 +20,23 @@
     </div>
 
     <div class='container-fluid art'>
-      <!-- this will contain two images -->
+      <div class="row">
+        <div class="col-xs-6 fleurs img-responsive">
+          <img class='center-block' src="/fleurs.png" alt="flowers">
+        </div>
+        <div class="col-xs-6 fleurs img-responsive">
+          <img class='center-block' src="/fleurs.png" alt="flowers">
+        </div>
+      </div>
     </div>
 
     <div class="container-fluid author">
-      <h4>made by <a href='https://cyclokitty.github.io/'>Laura Veee</a> 2017</h4>
+      <div class="row">
+        <div class="col-xs-12">
+          <h4>made by <a href='https://cyclokitty.github.io/'>Laura Veee</a> 2017</h4>
+        </div>
+      </div>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
