--- a/views/results.html
+++ b/views/results.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tell Me Your Name</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel='stylesheet' href='/results.css' />
   </head>
@@ -14,17 +15,17 @@
       <div class="unicorn">
         <img src="/unicorn.png" alt="unicorn">
       </div>
-      <div class="ani-name">
+      <div class="ani-name animated infinite tada">
         <h1>{{ name }}</h1>
       </div>
     </div>
 
     <div class='container-fluid art'>
       <div class="row">
-        <div class="col-xs-6 fleurs img-responsive">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 fleurs img-responsive">
           <img class='center-block' src="/fleurs.png" alt="flowers">
         </div>
-        <div class="col-xs-6 fleurs img-responsive">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 fleurs img-responsive">
           <img class='center-block' src="/fleurs.png" alt="flowers">
         </div>
       </div>
