--- a/views/results.html
+++ b/views/results.html
@@ -12,11 +12,16 @@
   <body>
 
     <div class='container-fluid results'>
-      <div class="unicorn">
-        <img src="/unicorn.png" alt="unicorn">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 unicorn img-responsive">
+          <img src="/unicorn.png" alt="unicorn">
+        </div>
       </div>
-      <div class="ani-name animated infinite tada">
-        <h1>{{ name }}</h1>
+
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ani-name animated infinite tada">
+          <h1>{{ name }}</h1>
+        </div>
       </div>
     </div>
 
