--- a/public/style.css
+++ b/public/style.css
@@ -1,24 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');
 
 body {
-  background-color: white;
+  background-color: #7EC0EE;
   color: 	#333;
   font-family: 'Luckiest Guy', cursive;
 }
 
 .welcome {
-  width: 50%;
-  margin: 0 auto;
+  background-color: #e6e6e6;
+  position: absolute;
+  left: 50%;
+  top: 33%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border: 1px solid #191970;
+  border-radius: 5px;
+  padding: 50px;
   text-align: center;
-  padding: 20px;
+  box-shadow: 10px 10px 5px #333;
 }
 
-button {
-  margin: 10px;
+.btn {
+  margin-top: 10px;
 }
 
-.box {
-  width: 50%;
-  margin: 0 auto;
+.warning {
+  width: 33%;
+  margin: 50px auto;
   text-align: center;
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 5px;
 }
