--- a/views/help.html
+++ b/views/help.html
@@ -10,7 +10,7 @@
 </head>
   <body>
 
-    <div class="box">
+    <div class="welcome">
       <h1>Woops!</h1>
       <p>Looks like you didn't enter a name in the form. Go back and type something in the form.</p>
       <h3>Thanks!</h3>
