--- a/views/index.html
+++ b/views/index.html
@@ -15,13 +15,10 @@
       <p>
         Bow down to her awesome, mad talents!
       </p>
-    </div>
-
-    <div class="container-fluid box">
       <form action='/' method='POST'>
         <div class='form-group'>
           <input type='text' class='form-control' placeholder='Type Your First Name Here' name='name' value='' />
-          <button type='submit' class='btn btn-success'>Click!</button>
+          <button type='submit' class='btn btn-success btn-block'>Click!</button>
         </div>
       </form>
     </div>
